# ChangeVoice

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mg/axechen/changevoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: changeVoice.cpp  com_mg_axechen_changevoice_VoiceTools.h
app/src/main/java/com/mg/axechen/changevoice/: MainActivity.java  VoiceTools.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/mg/axechen/changevoice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
